chore(adsense-dev): conditionally load ads only on non-localhost; feat(unicode): canvas preview visible and PNG export

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"CusImage","url":"https://www.cusimage.com","logo":"https://www.cusimage.com/logo.png"}</script>
+    <script>
+      (function(){
+        var host = location.hostname || '';
+        var isLocal = host === 'localhost' || host === '127.0.0.1' || /\.vercel\.dev$/.test(host);
+        if (isLocal) return;
+        var s = document.createElement('script');
+        s.async = true;
+        s.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853';
+        s.crossOrigin = 'anonymous';
+        document.head.appendChild(s);
+      })();
+    </script>
 </head>
 <body>
     <header class="header">
