--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -49,6 +49,18 @@
       {"@type":"Question","name":"What output formats are supported?","acceptedAnswer":{"@type":"Answer","text":"You can copy plain text output and download it as a .txt file."}}
     ]}
     </script>
+    <script>
+      (function(){
+        var host = location.hostname || '';
+        var isLocal = host === 'localhost' || host === '127.0.0.1' || /\.vercel\.dev$/.test(host);
+        if (isLocal) return;
+        var s = document.createElement('script');
+        s.async = true;
+        s.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853';
+        s.crossOrigin = 'anonymous';
+        document.head.appendChild(s);
+      })();
+    </script>
 </head>
 <body>
     <header class="header">
