chore: update HTML/CSS/JS pages and rules

--- a/blank-image.html
+++ b/blank-image.html
@@ -89,7 +89,8 @@
     .image-preview-container canvas{max-width:100%;height:auto}
     @media (max-width: 768px){ .form-grid{grid-template-columns:1fr} }
   </style>
-  </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
+</head>
 <body>
   <header class="header">
     <div class="container">
