--- a/test-navigation.html
+++ b/test-navigation.html
@@ -18,6 +18,7 @@
         .error { color: red; }
     </style>
     <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Navigation Link Test</h1>
