--- a/image-describer.html
+++ b/image-describer.html
@@ -83,7 +83,8 @@
       ]
     }
     </script>
-    </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
+</head>
 <body>
     <header class="header">
         <div class="container">
