优化 Ambigram 页面设计与旋转动效；移除 Footer 动效并新增入口；增强生成结果旋转展示；导航与路由集成

--- a/blank-image.html
+++ b/blank-image.html
@@ -109,6 +109,7 @@
             <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
             <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
             <li><a href="/blank-image" class="nav-link active" aria-current="page">Blank Image</a></li>
+            <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
           </ul>
         </nav>
       </div>
