--- a/images-for-fb-cover.html
+++ b/images-for-fb-cover.html
@@ -35,6 +35,7 @@
             <li><a href="/images-for-fb-cover" class="nav-link active">Fb Covers</a></li>
             <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
             <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
+            <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
           </ul>
         </nav>
       </div>
