--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
                         <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
                         <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
+                        <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
                     </ul>
                 </nav>
             </div>
@@ -121,6 +122,17 @@
                     </div>
                     <h3 class="card-title">Blank Image</h3>
                     <p class="card-description">Create printable blank pages with custom grids, lines, templates, units and DPI; export PNG/JPG/SVG</p>
+                    <span class="card-cta">Get Started →</span>
+                </a>
+                <a href="/ambigram-generator" class="feature-card">
+                    <div class="card-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 2L12 22M2 12L22 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5"/>
+                        </svg>
+                    </div>
+                    <h3 class="card-title">Ambigram Generator</h3>
+                    <p class="card-description">Create reversible symmetric typography and download SVG/PNG</p>
                     <span class="card-cta">Get Started →</span>
                 </a>
             </div>
