--- a/400x400-black-image.html
+++ b/400x400-black-image.html
@@ -34,6 +34,7 @@
             <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
             <li><a href="/400x400-black-image" class="nav-link active">400x400 Black Image</a></li>
             <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
+            <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
           </ul>
         </nav>
       </div>
