--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -81,6 +81,7 @@
             <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
             <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
             <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
+            <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
                     </ul>
                 </nav>
             </div>
