--- a/blank-image.html
+++ b/blank-image.html
@@ -89,7 +89,18 @@
     .image-preview-container canvas{max-width:100%;height:auto}
     @media (max-width: 768px){ .form-grid{grid-template-columns:1fr} }
   </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
+<script>
+  (function(){
+    var host = location.hostname || '';
+    var isLocal = host === 'localhost' || host === '127.0.0.1' || /\.vercel\.dev$/.test(host);
+    if (isLocal) return;
+    var s = document.createElement('script');
+    s.async = true;
+    s.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853';
+    s.crossOrigin = 'anonymous';
+    document.head.appendChild(s);
+  })();
+</script>
 </head>
 <body>
   <header class="header">
