--- a/pricing.html
+++ b/pricing.html
@@ -270,14 +270,25 @@
           modal.classList.add('show');
           if (typeof refresh === 'function') { try { refresh(); } catch(e){} }
           (async function(){
-            var info = null;
+            var info = null; var profile = null;
             try {
               var r2 = await fetch('/api/purchases/latest');
               if (r2.ok) { var j2 = await r2.json(); info = j2 && j2.latest || null; }
+              var r3 = await fetch('/api/auth/profile');
+              if (r3.ok) { profile = await r3.json(); }
             } catch(e){}
             if (content) {
               var lines = ['Purchase successful'];
+              if (profile && (profile.email || profile.default_name || profile.display_name)) {
+                var email = profile.email || profile.default_name || profile.display_name || '';
+                lines.push('Account: ' + email);
+                if (profile.id || profile.user_id) lines.push('User ID: ' + (profile.id || profile.user_id));
+              }
               if (info && info.order_id) lines.push('Order: ' + info.order_id);
+              if (info && typeof info.amount === 'number') {
+                lines.push('Recharge: ' + info.amount + ' credits');
+                lines.push('Reward: +' + info.amount + ' credits, valid 365 days');
+              }
               content.innerHTML = '<div style="display:flex;align-items:center;gap:12px">\n  <svg class="check-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>\n  <div>' + lines.map(function(t){ return '<p class="loading-text">'+t+'</p>'; }).join('') + '</div>\n</div>';
             }
             setTimeout(function(){ modal.classList.remove('show'); }, 2200);
