--- a/pricing.html
+++ b/pricing.html
@@ -270,12 +270,22 @@
           modal.classList.add('show');
           if (typeof refresh === 'function') { try { refresh(); } catch(e){} }
           (async function(){
-            var info = null; var profile = null;
+            var info = null; var profile = null; var credited = false; var amountCfg = null;
             try {
-              var r2 = await fetch('/api/purchases/latest');
-              if (r2.ok) { var j2 = await r2.json(); info = j2 && j2.latest || null; }
+              var params2 = new URLSearchParams(location.search || '');
+              var oid = params2.get('order_id') || '';
+              if (oid) {
+                var rBy = await fetch('/api/purchases/by-order?order_id=' + encodeURIComponent(oid));
+                if (rBy.ok) { var jBy = await rBy.json(); info = jBy && jBy.order || null; credited = !!(jBy && jBy.credited); }
+              }
+              if (!info) {
+                var r2 = await fetch('/api/purchases/latest');
+                if (r2.ok) { var j2 = await r2.json(); info = j2 && j2.latest || null; credited = !!info; }
+              }
               var r3 = await fetch('/api/auth/profile');
               if (r3.ok) { profile = await r3.json(); }
+              var r4 = await fetch('/api/config');
+              if (r4.ok) { var j4 = await r4.json(); amountCfg = j4 && j4.credit_grant || null; }
             } catch(e){}
             if (content) {
               var lines = ['Purchase successful'];
@@ -285,10 +295,12 @@
                 if (profile.id || profile.user_id) lines.push('User ID: ' + (profile.id || profile.user_id));
               }
               if (info && info.order_id) lines.push('Order: ' + info.order_id);
-              if (info && typeof info.amount === 'number') {
-                lines.push('Recharge: ' + info.amount + ' credits');
-                lines.push('Reward: +' + info.amount + ' credits, valid 365 days');
+              var amt = (info && typeof info.amount === 'number') ? info.amount : (amountCfg || null);
+              if (amt != null) {
+                lines.push('Recharge: ' + amt + ' credits');
+                lines.push('Reward: +' + amt + ' credits, valid 365 days');
               }
+              lines.push('Status: ' + (credited ? 'Credited' : 'Pending'));
               content.innerHTML = '<div style="display:flex;align-items:center;gap:12px">\n  <svg class="check-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>\n  <div>' + lines.map(function(t){ return '<p class="loading-text">'+t+'</p>'; }).join('') + '</div>\n</div>';
             }
             setTimeout(function(){ modal.classList.remove('show'); }, 2200);
